# Nucleus_cell_deformation

./: Contour_coords_cell_def.txt  Contour_coords_cell_undef.txt  Contour_coords_nucl_def.txt  Contour_coords_nucl_undef.txt  Fluorescence_oocyte_deformation.py  Fluorescence_oocyte_deformation_functions.py  LICENSE.txt  README.md  env.yml  pyproject.toml
Example data/: Contour_coords_cell_def.txt  Contour_coords_cell_undef.txt  Contour_coords_nucl_def.txt  Contour_coords_nucl_undef.txt  cell_def.tif  cell_undef.tif
src/nucleus_cell_deformation/: __init__.py  fluorescence_oocyte_deformation.py  fluorescence_oocyte_deformation_functions.py
